--- a/.gitignore
+++ b/.gitignore
@@ -40,15 +40,13 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-.terraform/
-.terraform.*
-terraform-provider-*
-
-
+# terraform
 .terraform/
 .terraform.*
 **/.terraform/
 terraform-provider-*
-.next/
-node_modules/
+terraform.tfstate
+terraform.tfstate.backup
+*.tfplan
+.build/
 
